--- a/Base.Web/Sitio.Master
+++ b/Base.Web/Sitio.Master
@@ -386,14 +386,14 @@
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		    <script>
 			    if (!window.jQuery) {
-				    document.write('<script src="Content/js/libs/jquery-3.2.1.min.js"><\/script>');
+			        document.write('<script src="<%= ResolveUrl("~/Content/js/libs/jquery-3.2.1.min.js") %>"><\/script>');
 			    }
 		    </script>
 
 		    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		    <script>
 			    if (!window.jQuery.ui) {
-				    document.write('<script src="Content/js/libs/jquery-ui.min.js"><\/script>');
+			        document.write('<script src="<%= ResolveUrl("~/Content/js/libs/jquery-ui.min.js") %>"><\/script>');
 			    }
 		    </script>
 
