--- a/Base.Web/Sitio.Master
+++ b/Base.Web/Sitio.Master
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head runat="server">
 		<meta charset="utf-8" />
+        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
 		<title>Pensemos SI</title>
 		<meta name="description" content="" />
 		<meta name="author" content="" />
