--- a/Base.Web/Sitio.Master
+++ b/Base.Web/Sitio.Master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head runat="server">
 		<meta charset="utf-8" />
-        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
+        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" /> 
 		<title>Pensemos SI</title>
 		<meta name="description" content="" />
 		<meta name="author" content="" />
@@ -26,6 +26,7 @@
 
 		<!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
 		<link rel="stylesheet" type="text/css" media="screen" href="Content/css/demo.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="Content/css/datepicker3.css" />
 
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="Content/img/favicon/favicon.ico" type="image/x-icon" />
@@ -443,6 +444,7 @@
 
 		<!-- JQUERY VALIDATE -->
         <script src='<%= ResolveUrl("~/Content/js/plugin/jquery-validate/jquery.validate.min.js") %>'></script>
+        <script src='<%= ResolveUrl("~/Scripts/jquery.validation.net.webforms.min.js") %>'></script>
 
 		<!-- JQUERY MASKED INPUT -->
         <script src='<%= ResolveUrl("~/Content/js/plugin/masked-input/jquery.maskedinput.min.js") %>'></script>
@@ -487,6 +489,8 @@
 		<script src='<%= ResolveUrl("~/Content/js/plugin/datatables/dataTables.tableTools.min.js") %>'></script>
 		<script src='<%= ResolveUrl("~/Content/js/plugin/datatables/dataTables.bootstrap.min.js") %>'></script>
 		<script src='<%= ResolveUrl("~/Content/js/plugin/datatable-responsive/datatables.responsive.min.js") %>'></script>
+
+        <script src='<%= ResolveUrl("~/Content/js/plugin/bootstrap-datapicker/bootstrap-datepicker.js") %>'></script>
 
 		<script>
 		    // DO NOT REMOVE : GLOBAL FUNCTIONS!
